@@ -1,9 +1,20 @@
 \name{get.means}
 \alias{get.means}
-\docType{data}
 \title{get means}
 \description{Positioning Function for the mean of each cluster of points.}
-\usage{get.means}
+\usage{
+get.means(d, ...)
+}
+\arguments{
+  \item{d}{
+}
+  \item{\dots}{
+}
+}
+
+
+
+\author{Toby Dylan Hocking <toby.hocking@inria.fr>}
 
 
 
